# langgraph-cursor-base

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.cursor/rules/: projrule.mdc
agent/: __init__.py  config.py  console.py  graph.py
agent/mcp/: __init__.py  client.py  server.py  test.py  tools.py
